--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   windows-10-ultra-fast:
-    runs-on: windows-2019  # Using Windows Server 2019 which is closer to Windows 10
+    runs-on: windows-2022  # Using Windows Server 2022
     timeout-minutes: 340
     
     steps:
@@ -112,7 +112,11 @@ jobs:
         echo "=== CREATING USER ACCOUNT ==="
         
         # Generate password quickly
-        $password = -join ((65..90) + (97..122) + (48..57) | Get-Random -Count 12 | % {[char]$_})
+        $chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%'
+        $password = ''
+        for ($i = 0; $i -lt 12; $i++) {
+            $password += $chars[(Get-Random -Maximum $chars.Length)]
+        }
         
         # Create user
         net user WIN10 $password /add /expires:never
@@ -212,20 +216,27 @@ jobs:
         $endTime = (Get-Date).AddMinutes($minutes)
         
         # Simple timer without complex calculations
-        $startTime = Get-Date
+        $counter = 0
         do {
-            $elapsed = (Get-Date) - $startTime
-            $remaining = $minutes - $elapsed.TotalMinutes
-            if ($remaining -le 0) { break }
+            $remaining = $endTime - (Get-Date)
+            if ($remaining.TotalSeconds -le 0) { break }
             
-            $mins = [math]::Floor($remaining)
-            $secs = [math]::Floor(($remaining - $mins) * 60)
+            $hours = [math]::Floor($remaining.TotalHours)
+            $mins = [math]::Floor($remaining.TotalMinutes % 60)
+            $secs = [math]::Floor($remaining.TotalSeconds % 60)
             
-            Write-Host "Time remaining: $($mins.ToString('00')):$($secs.ToString('00'))" -NoNewline
+            Write-Host "Time remaining: $($hours.ToString('00')):$($mins.ToString('00')):$($secs.ToString('00'))" -NoNewline
             Start-Sleep -Seconds 1
             Write-Host "`r" -NoNewline
             
-        } while ($remaining -gt 0)
+            $counter++
+            if ($counter -ge 30) {
+                echo ""
+                echo "Session still active..."
+                $counter = 0
+            }
+            
+        } while ($remaining.TotalSeconds -gt 0)
         
         echo ""
         echo "Session completed successfully"
